--- a/doc/plugins/camelcase.mdwn
+++ b/doc/plugins/camelcase.mdwn
@@ -1,4 +1,4 @@
-This plugin makes words in CamelCase be treated as [[WikiLinks]]. That is
+This plugin makes words in CamelCase be treated as [[WikiLinks|WikiLink]]. That is
 to say, any two or more words capitalised and mashed together are assumed
 to be the name of some other page on the wiki, and so become a link.
 
