--- a/doc/tags.mdwn
+++ b/doc/tags.mdwn
@@ -9,9 +9,9 @@ typical wiki way to do so is to create a "CategoryFoo" page and link pages
 in the category to it. That is just another form of tagging.
 
 Sometimes you may want to tag a page without putting a visible link on it.
-The [[meta_plugin|plugins/meta]] allows you to do so, like this:
+The [[tag_plugin|plugins/tag]] allows you to do so, like this:
 
-	\\[[meta link=mytag]]
+	\\[[tag mytag othertag thirdtag]]
 
 One way to use these tags is to create a [[blog]] of pages that have a
 particular set of tags. Or just look at the [[BackLinks]] to a tag page to
