--- a/basewiki/preprocessordirective.mdwn
+++ b/basewiki/preprocessordirective.mdwn
@@ -6,6 +6,11 @@ contain spaces and parameters. The general form is:
 This gets expanded before the rest of the page is processed, and can be used
 to transform the page in various ways.
 
+The quotes around values can be omitted if the value is a simple word.
+Also, some directives may use parameters without values, for example:
+
+\\[[tag foo]]
+
 Note that if a preprocessor directive has no parameters, a space still must
 be put after its name, to avoid confusion with a [[WikiLink]]. For example:
 
