- Adds a tag plugin that allows more easily tagging pages.     The meta plugin can also still be used for that, but the tag plugin     also lists a page's tags at the bottom of the page.   - Allows preprocessor directives to have parameters with no specified     value.   - Fixes preprocessor directive parameter parsing so that     foo=bar baz now means "foo=bar" and a "baz" with no value. * Run pagetemplate hooks when inlining pages so that inlines pages also   list their tags. * Make all plugins with pagetemplate hooks check that variables exist   on the template before setting them.

--- a/doc/plugins/write.mdwn
+++ b/doc/plugins/write.mdwn
@@ -96,9 +96,16 @@ languages to ikiwiki.
 Each time a page is rendered, a [[template|templates]] is filled out.
 This hook allows modifying that template. The function is passed the name
 of the page, and a `HTML::Template` object that is the template that will
-be used to generate the page. It can manipulate that template, the most
-common thing to do is probably to call $template->param() to add a new
-custom parameter to the template.
+be used to generate the page. It can manipulate that template object.
+
+The most common thing to do is probably to call $template->param() to add
+a new custom parameter to the template. Note that in order to be robust,
+it's a good idea to check whether the template has a variable before trying
+to set it, as setting a variable that's not present is an error.
+
+	if ($template->query(name => 'foo')) {
+		$template->param("foo" => "bar");
+	}
 
 ## sanitize
 
