--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,17 @@
 ikiwiki (1.11) UNRELEASED; urgency=low
 
   * Patch from Enrico that
-    - allows preprocessor directives to have parameters with no specified
-      value
-    - fixes preprocessor directive parameter parsing so that
-      foo=bar baz now means "foo=bar" and a "baz" with no value
-    - Add a tag plugin that allows more easily tagging pages.
-      The meta plugin can also still be used for this.
+    - Adds a tag plugin that allows more easily tagging pages.
+      The meta plugin can also still be used for that, but the tag plugin
+      also lists a page's tags at the bottom of the page.
+    - Allows preprocessor directives to have parameters with no specified
+      value.
+    - Fixes preprocessor directive parameter parsing so that
+      foo=bar baz now means "foo=bar" and a "baz" with no value.
+  * Run pagetemplate hooks when inlining pages so that inlines pages also
+    list their tags.
+  * Make all plugins with pagetemplate hooks check that variables exist
+    on the template before setting them.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 27 Jul 2006 17:03:09 -0400
 
