--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -14,7 +14,7 @@ Released 29 April 2006.
 
 * Unit test suite (with tests of at least core stuff like
   [[GlobList]]). (status: exists, could of course use more tests)
-* [[Plugins]] _(status: done)_
+* [[Plugins]] _(status: done, interface still not quite stable)_
 * [[Tags]] _(status: partial)_
 * Should have fully working [[todo/utf8]] support. _(status: fair)_
 * [[Optimised_rendering|todo/optimisations]] if possible. Deal with other
