--- a/doc/plugins/tag.mdwn
+++ b/doc/plugins/tag.mdwn
@@ -6,4 +6,8 @@ The tags work the same as if you had put a (hidden) [[WikiLink]] on the page
 for each tag, so you can use a [[GlobList]] to link to all pages that are
 tagged with a given tag, for example.
 
-This plugin is included in ikiwiki, but is not enabled by default.
+This plugin is included in ikiwiki, but is not enabled by default. If it is
+enabled, you'll see a note below that this page is tagged with the "tags"
+tag.
+
+[[tag tags]]
