web commit by joey

--- a/doc/todo/tags.mdwn
+++ b/doc/todo/tags.mdwn
@@ -1,4 +1,4 @@
-Stuff still needing to be done with [[tags]]:
+Stuff still needing to be done with [[../tags]]:
 
 * Move the pages they link to into an automatic tag/ namespace?
 * Include tag info in the RSS feed.
