--- a/doc/plugins/tag.mdwn
+++ b/doc/plugins/tag.mdwn
@@ -1,6 +1,6 @@
 This plugin allows tagging pages. List tags as follows:
 
-	\\[[tag tech life linux]]
+	\[[tag tech life linux]]
 
 The tags work the same as if you had put a (hidden) [[WikiLink]] on the page
 for each tag, so you can use a [[GlobList]] to link to all pages that are
