another doubled escape removed

--- a/doc/tags.mdwn
+++ b/doc/tags.mdwn
@@ -11,7 +11,7 @@ in the category to it. That is just another form of tagging.
 Sometimes you may want to tag a page without putting a visible link on it.
 The [[tag_plugin|plugins/tag]] allows you to do so, like this:
 
-	\\[[tag mytag othertag thirdtag]]
+	\[[tag mytag othertag thirdtag]]
 
 One way to use these tags is to create a [[blog]] of pages that have a
 particular set of tags. Or just look at the [[BackLinks]] to a tag page to
