* Add getopt hook type, this allows plugins to add new command-line options. * Add --tagbase option to tag plugin.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ikiwiki (1.12) UNRELEASED; urgency=low
+
+  * Add getopt hook type, this allows plugins to add new command-line options.
+  * Add --tagbase option to tag plugin.
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 28 Jul 2006 01:17:48 -0400
+
 ikiwiki (1.11) unstable; urgency=low
 
   * Patch from Enrico that
