--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -66,7 +66,8 @@ These options control the mode that ikiwiki is operating in.
 
 # CONFIG OPTIONS
 
-These options configure the wiki.
+These options configure the wiki. Note that plugins can add additional
+configuration options of their own.
 
 * --wikiname
 
