* Add exclude option in setup files, works same as --exclude.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ ikiwiki (1.12) UNRELEASED; urgency=low
 
   * Add getopt hook type, this allows plugins to add new command-line options.
   * Add --tagbase option to tag plugin.
+  * Add exclude option in setup files, works same as --exclude.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 28 Jul 2006 01:17:48 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 28 Jul 2006 13:47:34 -0400
 
 ikiwiki (1.11) unstable; urgency=low
 
