* Put categories in rss feeds for tagged items.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ ikiwiki (1.12) UNRELEASED; urgency=low
   * Add getopt hook type, this allows plugins to add new command-line options.
   * Add --tagbase option to tag plugin.
   * Add exclude option in setup files, works same as --exclude.
+  * Put categories in rss feeds for tagged items.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 28 Jul 2006 13:47:34 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 29 Jul 2006 02:58:23 -0400
 
 ikiwiki (1.11) unstable; urgency=low
 
