--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -54,7 +54,9 @@ Some of ikiwiki's features:
 
 * [[tags]]
 
-  You can tag pages and use these tags in various ways.
+  You can tag pages and use these tags in various ways. Tags will show
+  up in the ways you'd expect, like at the bottom of pages, in blogs, and
+  in rss feeds.
 
 * Fast compiler
 
