--- a/doc/todo/plugin.mdwn
+++ b/doc/todo/plugin.mdwn
@@ -6,7 +6,7 @@ Suggestions of ideas for plugins:
 * a [[link_map]]
 * [[sigs]] ?
 * [[pageindexes]]
-* Wiki stats, such as total number of links, most linked to pages
+* Wiki stats, such as total number of links, most linked to pages (done)
 
 * Support [[RecentChanges]] as a regular page containing a plugin that
   updates each time there is a change, and statically builds the recent
