mercuriual backend in progress

--- a/doc/about_rcs_backends.mdwn
+++ b/doc/about_rcs_backends.mdwn
@@ -90,3 +90,9 @@ bugs.  It also has some drawbacks (especially wrt merge which was the hard
 part).  GIT doesn't have a similar functionality like 'svn merge -rOLD:NEW
 FILE' (please see the relevant comment in mergepast for more details), so I
 had to invent an ugly hack just for the purpose.
+
+## [mercurial](http://www.selenic.com/mercurial/)
+
+Being worked on by Emanuele Aina.
+
+<http://techn.ocracy.org/ikiwiki>
