--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,14 @@ ikiwiki (1.13) UNRELEASED; urgency=low
 
   * New pagestats plugin from Enrico, which can generate a table counting
     the backlinks for each page, or a del.icio.us style cloud.
+  * Build-depend on libtext-wikiformat-perl, so that the syntax check of
+    the wikiformat plugin works. Thanks, Emanuele Aina.
+  * Patch from Alessandro Dotti Contra to clean up backlinks and navbar
+    display, running them through pagetitle. This removes ugly underscores and
+    other gunk from the display, much nicer. You may want to rebuild your wiki
+    when upgrading to get the cleanup globally.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 29 Jul 2006 13:30:16 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 29 Jul 2006 14:22:18 -0400
 
 ikiwiki (1.12) unstable; urgency=low
 
