--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 ikiwiki (1.13) UNRELEASED; urgency=low
 
+  "Viva l'Italia!"
   * New pagestats plugin from Enrico, which can generate a table counting
     the backlinks for each page, or a del.icio.us style cloud.
   * Build-depend on libtext-wikiformat-perl, so that the syntax check of
@@ -8,6 +9,7 @@ ikiwiki (1.13) UNRELEASED; urgency=low
     display, running them through pagetitle. This removes ugly underscores and
     other gunk from the display, much nicer. You may want to rebuild your wiki
     when upgrading to get the cleanup globally.
+  * Polygen plugin from Enrico.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 29 Jul 2006 14:22:18 -0400
 
