--- a/doc/plugins/pagestats.mdwn
+++ b/doc/plugins/pagestats.mdwn
@@ -10,4 +10,6 @@ And here's how to create a table of all the pages on the wiki:
 
 	\[[pagestats style="table"]]
 
-This plugin is included in ikiwiki, but is not enabled by default.
+This plugin is included in ikiwiki, but is not enabled by default. If it is
+enabled, here's a link cloud for this entire wiki:
+[[pagestats ]]
