--- a/doc/plugins/pagestats.mdwn
+++ b/doc/plugins/pagestats.mdwn
@@ -13,3 +13,5 @@ And here's how to create a table of all the pages on the wiki:
 This plugin is included in ikiwiki, but is not enabled by default. If it is
 enabled, here's a link cloud for this entire wiki:
 [[pagestats ]]
+And here's a table:
+[[pagestats style="table"]]
