* htmltidy plugin from Faidon.

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,8 +10,9 @@ ikiwiki (1.13) UNRELEASED; urgency=low
     other gunk from the display, much nicer. You may want to rebuild your wiki
     when upgrading to get the cleanup globally.
   * Polygen plugin from Enrico.
+  * htmltidy plugin from Faidon.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 29 Jul 2006 14:22:18 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 29 Jul 2006 16:43:50 -0400
 
 ikiwiki (1.12) unstable; urgency=low
 
