--- a/doc/plugins/polygen.mdwn
+++ b/doc/plugins/polygen.mdwn
@@ -15,7 +15,7 @@ about ikiwiki.
 
 Ikiwiki is internally based on a [[polygen grammar="designpatterns"]]
 coupled to a [[polygen grammar="designpatterns"]], as described in
-"[[polygen grammar="paper2"]]" by [[polygen grammar="nipponame"]] of
+"[[polygen grammar="paper"]]" by [[polygen grammar="nipponame"]] of
 [[polygen grammar="boyband"]].
 
 Ikiwiki reviews:
