--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.12) UNRELEASED; urgency=low
+ikiwiki (1.12) unstable; urgency=low
 
   "Viva l'Italia!"
   * New pagestats plugin from Enrico, which can generate a table counting
@@ -21,8 +21,11 @@ ikiwiki (1.12) UNRELEASED; urgency=low
   * Add --tagbase option to tag plugin.
   * Add exclude option in setup files, works same as --exclude.
   * Put categories in rss feeds for tagged items.
+  * Allow preprocessor directives to be expanded in inlined blog pages.
+    However, to avoid inlining loops etc, don't expand inline directives in
+    inlined pages.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 29 Jul 2006 03:24:58 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 29 Jul 2006 17:12:56 -0400
 
 ikiwiki (1.11) unstable; urgency=low
 
