* fortune plugin (trivial)

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,7 @@ ikiwiki (1.12) unstable; urgency=low
   * Allow preprocessor directives to be expanded in inlined blog pages.
     However, to avoid inlining loops etc, don't expand inline directives in
     inlined pages.
+  * fortune plugin (trivial)
 
  -- Joey Hess <joeyh@debian.org>  Sat, 29 Jul 2006 17:12:56 -0400
 
